--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -76,6 +76,8 @@
                         <a class="collapse-item" href="{{ url_for('pais.paisIndex') }}">Pais</a>
                         <!-- Link para la vista de Nacionalidad -->
                         <a class="collapse-item" href="{{ url_for('nacionalidad.nacionalidadIndex') }}">Nacionalidad</a>
+                        <!-- Link para la vista de Productos -->
+                        <a class="collapse-item" href="{{ url_for('producto.productoIndex') }}">Producto</a>
                     </div>
                 </div>
             </li>
