crud de personas pero no muestra en mayúsculas guardo por si acaso

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -78,6 +78,8 @@
                         <a class="collapse-item" href="{{ url_for('nacionalidad.nacionalidadIndex') }}">Nacionalidad</a>
                         <!-- Link para la vista de Productos -->
                         <a class="collapse-item" href="{{ url_for('producto.productoIndex') }}">Producto</a>
+                        <!-- Link para la vista de Personas -->
+                        <a class="collapse-item" href="{{ url_for('persona.personaIndex') }}">Personas</a>
                     </div>
                 </div>
             </li>
