nueva referencial, se puede mejorar, referencial de proveedor puede haber campos que tienen que ser boolean pero asi me salio despues de roperme la cabeza :)

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -80,6 +80,8 @@
                         <a class="collapse-item" href="{{ url_for('producto.productoIndex') }}">Producto</a>
                         <!-- Link para la vista de Personas -->
                         <a class="collapse-item" href="{{ url_for('persona.personaIndex') }}">Personas</a>
+                        <!-- Link para la vista de Proveedores -->
+                        <a class="collapse-item" href="{{ url_for('proveedor.proveedorIndex') }}">Proveedores</a>
                     </div>
                 </div>
             </li>
