--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -82,6 +82,8 @@
                         <a class="collapse-item" href="{{ url_for('persona.personaIndex') }}">Personas</a>
                         <!-- Link para la vista de Proveedores -->
                         <a class="collapse-item" href="{{ url_for('proveedor.proveedorIndex') }}">Proveedores</a>
+                        <!-- Link para la vista de Clientes -->
+                        <a class="collapse-item" href="{{ url_for('cliente.clienteIndex') }}">Clientes</a>
                     </div>
                 </div>
             </li>
