se creo la referencia de sucursal y su crud puede mejorarse pero vamos por mas

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -84,6 +84,8 @@
                         <a class="collapse-item" href="{{ url_for('proveedor.proveedorIndex') }}">Proveedores</a>
                         <!-- Link para la vista de Clientes -->
                         <a class="collapse-item" href="{{ url_for('cliente.clienteIndex') }}">Clientes</a>
+                        <!-- Link para la vista de Sucursales -->
+                        <a class="collapse-item" href="{{ url_for('sucursal.sucursalIndex') }}">Sucursales</a>
                     </div>
                 </div>
             </li>
