se creo el crud de deposito

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -86,6 +86,8 @@
                         <a class="collapse-item" href="{{ url_for('cliente.clienteIndex') }}">Clientes</a>
                         <!-- Link para la vista de Sucursales -->
                         <a class="collapse-item" href="{{ url_for('sucursal.sucursalIndex') }}">Sucursales</a>
+                        <!-- Link para la vista de Depositos -->
+                        <a class="collapse-item" href="{{ url_for('deposito.depositoIndex') }}">Depositos</a>
                     </div>
                 </div>
             </li>
