se creo el crud de cargo :)

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -88,6 +88,8 @@
                         <a class="collapse-item" href="{{ url_for('sucursal.sucursalIndex') }}">Sucursales</a>
                         <!-- Link para la vista de Depositos -->
                         <a class="collapse-item" href="{{ url_for('deposito.depositoIndex') }}">Depositos</a>
+                        <!-- Link para la vista de Cargos -->
+                        <a class="collapse-item" href="{{ url_for('cargo.cargoIndex') }}">Cargos</a>
                     </div>
                 </div>
             </li>
