se creo el crud de estado civil

--- a/app/rutas/referenciales/proveedor/templates/proveedor-index.html
+++ b/app/rutas/referenciales/proveedor/templates/proveedor-index.html
@@ -131,7 +131,7 @@ Proveedores
       const nuevoRUC = $('#txtRUC').val();
       const nuevaRazonSocial = $('#txtRazonSocial').val();
       const nuevoRegistro = $('#txtRegistro').val();
-      const nuevoEstado = $('#txtEstado').val(); // Ahora esto es "activo", "inactivo" o "pendiente"
+      const nuevoEstado = $('#txtEstado').val();
       const tabla = $('#tbl').DataTable();
   
       const proveedorData = {
