--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -90,6 +90,8 @@
                         <a class="collapse-item" href="{{ url_for('deposito.depositoIndex') }}">Depositos</a>
                         <!-- Link para la vista de Cargos -->
                         <a class="collapse-item" href="{{ url_for('cargo.cargoIndex') }}">Cargos</a>
+                        <!-- Link para la vista de Estado Civil -->
+                        <a class="collapse-item" href="{{ url_for('estado_civil.estado_civilIndex') }}">Estado Civil</a>
                     </div>
                 </div>
             </li>
