se creo el crud de sexo

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -92,6 +92,8 @@
                         <a class="collapse-item" href="{{ url_for('cargo.cargoIndex') }}">Cargos</a>
                         <!-- Link para la vista de Estado Civil -->
                         <a class="collapse-item" href="{{ url_for('estado_civil.estado_civilIndex') }}">Estado Civil</a>
+                        <!-- Link para la vista de la referencia Sexo -->
+                        <a class="collapse-item" href="{{ url_for('sexo.sexoIndex') }}">Sexo</a>
                     </div>
                 </div>
             </li>
