--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -94,6 +94,8 @@
                         <a class="collapse-item" href="{{ url_for('estado_civil.estado_civilIndex') }}">Estado Civil</a>
                         <!-- Link para la vista de la referencia Sexo -->
                         <a class="collapse-item" href="{{ url_for('sexo.sexoIndex') }}">Sexo</a>
+                        <!-- Link para la vista de Marcas -->
+                        <a class="collapse-item" href="{{ url_for('marca.marcaIndex') }}">Marcas</a>
                     </div>
                 </div>
             </li>
