se creo el crud de emisoras

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -96,6 +96,8 @@
                         <a class="collapse-item" href="{{ url_for('sexo.sexoIndex') }}">Sexo</a>
                         <!-- Link para la vista de Marcas -->
                         <a class="collapse-item" href="{{ url_for('marca.marcaIndex') }}">Marcas</a>
+                        <!-- Link para la vista de Emisoras -->
+                        <a class="collapse-item" href="{{ url_for('emisora.emisoraIndex') }}">Emisoras</a>
                     </div>
                 </div>
             </li>
