--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -98,6 +98,8 @@
                         <a class="collapse-item" href="{{ url_for('marca.marcaIndex') }}">Marcas</a>
                         <!-- Link para la vista de Emisoras -->
                         <a class="collapse-item" href="{{ url_for('emisora.emisoraIndex') }}">Emisoras</a>
+                        <!-- Link para la vista de Tipo de Producto -->
+                        <a class="collapse-item" href="{{ url_for('tipo_producto.tipo_productoIndex') }}">Tipo de Producto</a>
                     </div>
                 </div>
             </li>
