--- a/app/rutas/referenciales/pais/templates/pais-index.html
+++ b/app/rutas/referenciales/pais/templates/pais-index.html
@@ -82,8 +82,8 @@ Paises
       columns: [
         { data: 'descripcion' },
         { data: function(row) {
-            return `<button type="button" name="btn_editar" class="btn btn-primary" data-id="${row.id}">Editar</button>
-                    <button type="button" name="btn_eliminar" class="btn btn-danger" data-id="${row.id}">Eliminar</button>`
+            return `<button type="button" name="btn_editar" class="btn btn-primary" data-id="${row.id_pais}">Editar</button>
+                    <button type="button" name="btn_eliminar" class="btn btn-danger" data-id="${row.id_pais}">Eliminar</button>`
           }
         }
       ]
