--- a/app/rutas/referenciales/deposito/templates/deposito-index.html
+++ b/app/rutas/referenciales/deposito/templates/deposito-index.html
@@ -18,10 +18,7 @@ Depósitos
           <thead>
             <tr>
               <th>ID</th>
-              <th>Nombre</th>
-              <th>Dirección</th>
-              <th>Teléfono</th>
-              <th>Capacidad</th>
+              <th>Descripcion</th>
               <th>Acciones</th>
             </tr>
           </thead>
@@ -46,20 +43,8 @@ Depósitos
           <div class="modal-body">
             <div class="form-group">
               <input type="hidden" id="txtIdDeposito">
-              <label for="txtNombre">Nombre:</label>
-              <input type="text" class="form-control" placeholder="Ingrese el nombre del Depósito" id="txtNombre">
-            </div>
-            <div class="form-group">
-              <label for="txtDireccion">Dirección:</label>
-              <input type="text" class="form-control" placeholder="Ingrese la dirección" id="txtDireccion">
-            </div>
-            <div class="form-group">
-              <label for="txtTelefono">Teléfono:</label>
-              <input type="number" class="form-control" placeholder="Ingrese el número de teléfono" id="txtTelefono">
-            </div>
-            <div class="form-group">
-              <label for="txtCapacidad">Capacidad: En m3</label>
-              <input type="number" class="form-control" placeholder="Ingrese la capacidad" id="txtCapacidad">
+              <label for="txtDescripcion">Descripcion:</label>
+              <input type="text" class="form-control" placeholder="Ingrese el nombre del Depósito" id="txtDescripcion">
             </div>
           </div>
 
@@ -94,10 +79,7 @@ Depósitos
       ajax: '/api/v1/depositos',
       columns: [
         { data: 'id_deposito' },
-        { data: 'nombre' },
-        { data: 'direccion' },
-        { data: 'telefono' },
-        { data: 'capacidad' },
+        { data: 'descripcion' },
         { data: function(row) {
             return `<button type="button" name="btn_editar" class="btn btn-primary" data-id="${row.id_deposito}">Editar</button>
                     <button type="button" name="btn_eliminar" class="btn btn-danger" data-id="${row.id_deposito}">Eliminar</button>`;
@@ -111,10 +93,7 @@ Depósitos
     $('#btnAgregar').on('click', function(){
       $('#modalTitle').text("Agregar un Depósito");
       $('#txtIdDeposito').val("");
-      $('#txtNombre').val("");
-      $('#txtDireccion').val("");
-      $('#txtTelefono').val("");
-      $('#txtCapacidad').val("");
+      $('#txtDescripcion').val("");
       $('#modalFormulario').modal();
     });
   }
@@ -122,17 +101,11 @@ Depósitos
   const guardar = () => {
     $('#btnGuardar').on('click', function() {
       const idDeposito = $('#txtIdDeposito').val();
-      const nuevoNombre = $('#txtNombre').val();
-      const nuevaDireccion = $('#txtDireccion').val();
-      const nuevoTelefono = $('#txtTelefono').val();
-      const nuevaCapacidad = $('#txtCapacidad').val();
+      const nuevaDescripcion = $('#txtDescripcion').val();
       const tabla = $('#tbl').DataTable();
 
       const depositoData = {
-        nombre: nuevoNombre,
-        direccion: nuevaDireccion,
-        telefono: nuevoTelefono,
-        capacidad: nuevaCapacidad
+        descripcion : nuevaDescripcion,
       };
 
       if(idDeposito) {
@@ -200,10 +173,7 @@ Depósitos
           })
           .then(resp => resp.json())
           .then(data => {
-            $('#txtNombre').val(data.data.nombre);
-            $('#txtDireccion').val(data.data.direccion);
-            $('#txtTelefono').val(data.data.telefono);
-            $('#txtCapacidad').val(data.data.capacidad);
+            $('#txtDescripcion').val(data.data.descripcion);
             $('#modalFormulario').modal();
           });
         }
